--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,5 +34,8 @@ Suggests:
     parallel,
     gganimate,
     foreach,
-    doParallel
+    doParallel,
+    here,
+    scoringRules,
+    Ternary
 Config/testthat/edition: 3
